--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is the buildsystem for the OpenWrt Linux distribution.
+This is the buildsystem for the OpenWrt Linux distribution modified for TP-Link WR1043ND.
 
 Please use "make menuconfig" to configure your appreciated
 configuration for the toolchain and firmware.
@@ -31,4 +31,9 @@ Sunshine!
 	Your OpenWrt Project
 	http://openwrt.org
 
+The OpenWRT firmware is in the bin/ar71xx/ directory and the backup files including 
+restoring back to factory is in TL-WR1043ND_Backup_Files/ directory.
+
+To use the scripts make sure the build directory path is set correctly in the script.
+You need JRE installed to run the scripts.
 
